--- a/db-deployment.yaml
+++ b/db-deployment.yaml
@@ -46,5 +46,5 @@ spec:
           image: busybox:latest
           args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
           volumeMounts:
-            - name: vpro-db-data
+            - name: vprodb-data
               mountPath: /var/lib/mysql
